// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`defaults 1`] = `
Array [
  Object {
    "apiVersion": "v1",
    "kind": "Service",
    "metadata": Object {
      "labels": Object {
        "app": "testredismaster73F27A6F",
        "role": "master",
      },
      "name": "test-redis-master-service-c852b917",
    },
    "spec": Object {
      "ports": Array [
        Object {
          "port": 6379,
          "targetPort": 6379,
        },
      ],
      "selector": Object {
        "app": "testredismaster73F27A6F",
        "role": "master",
      },
      "type": "ClusterIP",
    },
  },
  Object {
    "apiVersion": "apps/v1",
    "kind": "Deployment",
    "metadata": Object {
      "name": "test-redis-master-deployment-c8d84a45",
    },
    "spec": Object {
      "replicas": 1,
      "selector": Object {
        "matchLabels": Object {
          "app": "testredismaster73F27A6F",
          "role": "master",
        },
      },
      "template": Object {
        "metadata": Object {
          "labels": Object {
            "app": "testredismaster73F27A6F",
            "role": "master",
          },
        },
        "spec": Object {
          "containers": Array [
            Object {
              "env": Array [
                Object {
                  "name": "GET_HOSTS_FROM",
                  "value": "dns",
                },
              ],
              "image": "k8s.gcr.io/redis:e2e",
              "name": "master",
              "ports": Array [
                Object {
                  "containerPort": 6379,
                },
              ],
              "resources": Object {
                "requests": Object {
                  "cpu": "100m",
                  "memory": "100Mi",
                },
              },
            },
          ],
        },
      },
    },
  },
  Object {
    "apiVersion": "v1",
    "kind": "Service",
    "metadata": Object {
      "labels": Object {
        "app": "testredisslave47C5B2C0",
        "role": "slave",
      },
      "name": "test-redis-slave-service-c8fdf1aa",
    },
    "spec": Object {
      "ports": Array [
        Object {
          "port": 6379,
          "targetPort": 6379,
        },
      ],
      "selector": Object {
        "app": "testredisslave47C5B2C0",
        "role": "slave",
      },
      "type": "ClusterIP",
    },
  },
  Object {
    "apiVersion": "apps/v1",
    "kind": "Deployment",
    "metadata": Object {
      "name": "test-redis-slave-deployment-c836994f",
    },
    "spec": Object {
      "replicas": 2,
      "selector": Object {
        "matchLabels": Object {
          "app": "testredisslave47C5B2C0",
          "role": "slave",
        },
      },
      "template": Object {
        "metadata": Object {
          "labels": Object {
            "app": "testredisslave47C5B2C0",
            "role": "slave",
          },
        },
        "spec": Object {
          "containers": Array [
            Object {
              "env": Array [
                Object {
                  "name": "GET_HOSTS_FROM",
                  "value": "env",
                },
                Object {
                  "name": "REDIS_MASTER_SERVICE_HOST",
                  "value": "test-redis-master-service-c852b917",
                },
              ],
              "image": "gcr.io/google_samples/gb-redisslave:v1",
              "name": "slave",
              "ports": Array [
                Object {
                  "containerPort": 6379,
                },
              ],
              "resources": Object {
                "requests": Object {
                  "cpu": "100m",
                  "memory": "100Mi",
                },
              },
            },
          ],
        },
      },
    },
  },
]
`;

exports[`no slave replicas will deploy only the master 1`] = `
Array [
  Object {
    "apiVersion": "v1",
    "kind": "Service",
    "metadata": Object {
      "labels": Object {
        "app": "testredismaster73F27A6F",
        "role": "master",
      },
      "name": "test-redis-master-service-c852b917",
    },
    "spec": Object {
      "ports": Array [
        Object {
          "port": 6379,
          "targetPort": 6379,
        },
      ],
      "selector": Object {
        "app": "testredismaster73F27A6F",
        "role": "master",
      },
      "type": "ClusterIP",
    },
  },
  Object {
    "apiVersion": "apps/v1",
    "kind": "Deployment",
    "metadata": Object {
      "name": "test-redis-master-deployment-c8d84a45",
    },
    "spec": Object {
      "replicas": 1,
      "selector": Object {
        "matchLabels": Object {
          "app": "testredismaster73F27A6F",
          "role": "master",
        },
      },
      "template": Object {
        "metadata": Object {
          "labels": Object {
            "app": "testredismaster73F27A6F",
            "role": "master",
          },
        },
        "spec": Object {
          "containers": Array [
            Object {
              "env": Array [
                Object {
                  "name": "GET_HOSTS_FROM",
                  "value": "dns",
                },
              ],
              "image": "k8s.gcr.io/redis:e2e",
              "name": "master",
              "ports": Array [
                Object {
                  "containerPort": 6379,
                },
              ],
              "resources": Object {
                "requests": Object {
                  "cpu": "100m",
                  "memory": "100Mi",
                },
              },
            },
          ],
        },
      },
    },
  },
]
`;
